# coin-exp

./: .gitignore  DOCKER.md  LICENSE  README.md  docker-compose.yml  docker-setup.sh  setup-all.sh
backend/: Dockerfile  Makefile  README_CRYPTO.md  UV_GUIDE.md  ci.sh  crypto_tracker.py  pyproject.toml  setup.sh
frontend/: Dockerfile  README.md  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/prices/: route.ts
frontend/src/app/prices/: page.tsx
frontend/src/components/: CryptoPriceCard.tsx
frontend/src/lib/: crypto.ts
frontend/src/types/: crypto.ts
